# cbr-community

./: README.md  pyproject.toml
.github/actions/deploy-cbr-custom-site/: action.yml
.github/actions/deploy-cbr-dev-site/: action.yml
.github/actions/deploy-cbr-git-site/: action.yml
.github/actions/update-cbr-content/: action.yml
.github/actions/wait_for_pip_package/: action.yml
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__git.yml  ci-pipeline__main.yml  ci-pipeline__qa.yml
cbr_community/: version
cbr_community/custom/cbr_static/content/en/web-pages/: aaa.md
cbr_community/custom/cbr_static/content/en/web-pages/community/: faq.md  index.md
cbr_community/custom/cbr_website_beta/: version
cbr_community/custom/cbr_website_beta/apps/templates/includes/: home.html
cbr_community/utils/: Version.py
deploy/docker/cbr_community/: cbr__run_locally.sh  docker-compose.yml
deploy/docker/cbr_community/custom/cbr_static/content/en/web-pages/: aaa.md
deploy/docker/cbr_community__from_pip/: Dockerfile  docker-compose.yml
tests/unit/utils/: test_Version.py
