[tool.poetry]
name        = "cbr_community"
version     = "v0.20.0"
description = "CBR - Community"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/cbr-community"
repository  = "https://github.com/the-cyber-boardroom/cbr-community"

[tool.poetry.dependencies]
python          = "^3.7"
osbot-utils     = "*"


[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
